# lattice.rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
benches/: README.md  tree_benchmarks.rs
src/: main.rs
src/trees/: avl_tree.rs  b_tree.rs  binary_tree.rs
